force-app/main/default/objects/DesiredCondition__c/DesiredCondition__c.object-meta.xml
<CustomObject>
    <label>希望条件</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>希望条件NO</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>