force-app/main/default/objects/DesiredCondition__c/fields/AnnouncementDate__c.field-meta.xml
<CustomField>
    <fullName>AnnouncementDate__c</fullName>
    <label>発令日</label>
    <type>Date</type>
</CustomField>