force-app/main/default/objects/DesiredCondition__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>希望条件</relationshipLabel>
    <relationshipName>DesiredTermsApplication</relationshipName>
    <type>Lookup</type>
</CustomField>