force-app/main/default/objects/DesiredCondition__c/fields/CarWidth__c.field-meta.xml
<CustomField>
    <fullName>CarWidth__c</fullName>
    <label>車幅</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>