force-app/main/default/objects/DesiredCondition__c/fields/CommonChargeManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>CommonChargeManagementCharge__c</fullName>
    <label>共益管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>