force-app/main/default/objects/DesiredCondition__c/fields/CommuteMethod__c.field-meta.xml
<CustomField>
    <fullName>CommuteMethod__c</fullName>
    <label>希望通勤手段</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommuteMethod</valueSetName>
    </valueSet>
</CustomField>