force-app/main/default/objects/DesiredCondition__c/fields/CorporateHousingMoveDesiredDate2__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingMoveDesiredDate2__c</fullName>
    <label>入居希望日②</label>
    <type>Date</type>
</CustomField>