force-app/main/default/objects/DesiredCondition__c/fields/CorporateHousingMoveDesiredDateNote__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingMoveDesiredDateNote__c</fullName>
    <label>入居希望日①コメント</label>
    <type>TextArea</type>
</CustomField>