force-app/main/default/objects/DesiredCondition__c/fields/CorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定</label>
    <referenceTo>ServiceContractNewMatter__c</referenceTo>
    <relationshipLabel>希望条件</relationshipLabel>
    <relationshipName>DesiredConditionServiceContractNewMatter</relationshipName>
    <type>Lookup</type>
</CustomField>