force-app/main/default/objects/DesiredCondition__c/fields/del_AreaUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>del_AreaUpperLimit__c</fullName>
    <label>(不要)上限面積</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>