force-app/main/default/objects/DesiredCondition__c/fields/DepositAmortisation__c.field-meta.xml
<CustomField>
    <fullName>DepositAmortisation__c</fullName>
    <label>敷引償却</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>