force-app/main/default/objects/DesiredCondition__c/fields/DesiredArea__c.field-meta.xml
<CustomField>
    <fullName>DesiredArea__c</fullName>
    <label>希望エリア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>