force-app/main/default/objects/DesiredCondition__c/fields/DesiredBreadthLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>DesiredBreadthLowerLimit__c</fullName>
    <label>希望広さ_下限(㎡)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>