force-app/main/default/objects/DesiredCondition__c/fields/DesiredBreadthSqm__c.field-meta.xml
<CustomField>
    <fullName>DesiredBreadthSqm__c</fullName>
    <label>希望広さ平米</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>