force-app/main/default/objects/DesiredCondition__c/fields/DesiredBreadthUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>DesiredBreadthUpperLimit__c</fullName>
    <label>希望広さ_上限(㎡)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>