force-app/main/default/objects/DesiredCondition__c/fields/DesiredCommutingTime__c.field-meta.xml
<CustomField>
    <fullName>DesiredCommutingTime__c</fullName>
    <label>希望通勤時間(分)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>