force-app/main/default/objects/DesiredCondition__c/fields/DesiredDistrictCity__c.field-meta.xml
<CustomField>
    <fullName>DesiredDistrictCity__c</fullName>
    <label>希望地区市区</label>
    <length>255</length>
    <type>Text</type>
</CustomField>