force-app/main/default/objects/DesiredCondition__c/fields/DesiredGetOffStation3__c.field-meta.xml
<CustomField>
    <fullName>DesiredGetOffStation3__c</fullName>
    <label>希望沿線3～駅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>