force-app/main/default/objects/DesiredCondition__c/fields/DesiredRealEstateRailway3__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateRailway3__c</fullName>
    <label>希望沿線３</label>
    <length>255</length>
    <type>Text</type>
</CustomField>