force-app/main/default/objects/DesiredCondition__c/fields/DesiredRealEstateStation1__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateStation1__c</fullName>
    <label>希望沿線１駅～</label>
    <length>255</length>
    <type>Text</type>
</CustomField>