force-app/main/default/objects/DesiredCondition__c/fields/DesiredRealEstateStation2__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateStation2__c</fullName>
    <label>希望沿線2駅～</label>
    <length>255</length>
    <type>Text</type>
</CustomField>