force-app/main/default/objects/DesiredCondition__c/fields/DesiredRealEstateStation3__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateStation3__c</fullName>
    <label>希望沿線3駅～</label>
    <length>255</length>
    <type>Text</type>
</CustomField>