force-app/main/default/objects/DesiredCondition__c/fields/DesiredRentFreeNote__c.field-meta.xml
<CustomField>
    <fullName>DesiredRentFreeNote__c</fullName>
    <label>希望家賃コメント</label>
    <type>TextArea</type>
</CustomField>