force-app/main/default/objects/DesiredCondition__c/fields/DesiredTermsId__c.field-meta.xml
<CustomField>
    <fullName>DesiredTermsId__c</fullName>
    <externalId>true</externalId>
    <label>希望条件ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>