force-app/main/default/objects/DesiredCondition__c/fields/EmployeeContact__c.field-meta.xml
<CustomField>
    <fullName>EmployeeContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社員連絡先</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>希望条件</relationshipLabel>
    <relationshipName>EmployeeContact</relationshipName>
    <type>Lookup</type>
</CustomField>