force-app/main/default/objects/DesiredCondition__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <formula>MediationRequest__r.EmployeeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>社員名</label>
    <type>Text</type>
</CustomField>