force-app/main/default/objects/DesiredCondition__c/fields/GarageTerms__c.field-meta.xml
<CustomField>
    <fullName>GarageTerms__c</fullName>
    <label>諸条件駐車場</label>
    <length>255</length>
    <type>Text</type>
</CustomField>