force-app/main/default/objects/DesiredCondition__c/fields/MediationRequest__c.field-meta.xml
<CustomField>
    <fullName>MediationRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>斡旋依頼</label>
    <referenceTo>MediationRequest__c</referenceTo>
    <relationshipLabel>希望条件</relationshipLabel>
    <relationshipName>MediationRequest</relationshipName>
    <type>Lookup</type>
</CustomField>