force-app/main/default/objects/DesiredCondition__c/fields/MoveDesiredDate__c.field-meta.xml
<CustomField>
    <fullName>MoveDesiredDate__c</fullName>
    <label>入居希望日①</label>
    <type>Date</type>
</CustomField>