force-app/main/default/objects/DesiredCondition__c/fields/NewAffiliationName__c.field-meta.xml
<CustomField>
    <fullName>NewAffiliationName__c</fullName>
    <label>新所属</label>
    <length>255</length>
    <type>Text</type>
</CustomField>