force-app/main/default/objects/DesiredCondition__c/fields/NewMatter__c.field-meta.xml
<CustomField>
    <fullName>NewMatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新規</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>希望条件</relationshipLabel>
    <relationshipName>DesiredTermsNewMatter</relationshipName>
    <type>Lookup</type>
</CustomField>