force-app/main/default/objects/DesiredCondition__c/fields/NewWorkLocationAdress__c.field-meta.xml
<CustomField>
    <fullName>NewWorkLocationAdress__c</fullName>
    <label>新所属住所</label>
    <type>TextArea</type>
</CustomField>