force-app/main/default/objects/DesiredCondition__c/fields/PreviewDesiredDate1__c.field-meta.xml
<CustomField>
    <fullName>PreviewDesiredDate1__c</fullName>
    <label>下見予定日①</label>
    <type>Date</type>
</CustomField>