force-app/main/default/objects/DesiredCondition__c/fields/PreviewDesiredDate1Note__c.field-meta.xml
<CustomField>
    <fullName>PreviewDesiredDate1Note__c</fullName>
    <label>下見予定日①コメント</label>
    <type>TextArea</type>
</CustomField>