force-app/main/default/objects/DesiredCondition__c/fields/PreviewDesiredDate2__c.field-meta.xml
<CustomField>
    <fullName>PreviewDesiredDate2__c</fullName>
    <label>下見予定日②</label>
    <type>Date</type>
</CustomField>