force-app/main/default/objects/DesiredCondition__c/fields/PreviewDesiredDate2Note__c.field-meta.xml
<CustomField>
    <fullName>PreviewDesiredDate2Note__c</fullName>
    <label>下見予定日②コメント</label>
    <type>TextArea</type>
</CustomField>