force-app/main/default/objects/DesiredCondition__c/fields/RentRent__c.field-meta.xml
<CustomField>
    <fullName>RentRent__c</fullName>
    <label>月額家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>