force-app/main/default/objects/DesiredCondition__c/fields/SecondChoice__c.field-meta.xml
<CustomField>
    <fullName>SecondChoice__c</fullName>
    <formula>DesiredRealEstateRailway2__c +  DesiredRealEstateStation2__c + &quot;～&quot; +  DesiredGetOffStation2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>第二希望</label>
    <type>Text</type>
</CustomField>