force-app/main/default/objects/DesiredCondition__c/fields/SelectionPriorityRankingLayout__c.field-meta.xml
<CustomField>
    <fullName>SelectionPriorityRankingLayout__c</fullName>
    <label>選定優先順位間取り</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>