force-app/main/default/objects/DesiredCondition__c/fields/SelectionPriorityRankingRent__c.field-meta.xml
<CustomField>
    <fullName>SelectionPriorityRankingRent__c</fullName>
    <label>選定優先順位家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>