force-app/main/default/objects/DesiredCondition__c/fields/ToNearestStation__c.field-meta.xml
<CustomField>
    <fullName>ToNearestStation__c</fullName>
    <label>最寄り駅まで(分)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>