force-app/main/default/objects/DesiredCondition__c/fields/UnnecessaryNewAffiliationName__c.field-meta.xml
<CustomField>
    <fullName>UnnecessaryNewAffiliationName__c</fullName>
    <formula>Application__r.NewCompanyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(不要)新所属</label>
    <type>Text</type>
</CustomField>