force-app/main/default/objects/DesiredCondition__c/fields/UnnecessaryNewWorkLocationAdress__c.field-meta.xml
<CustomField>
    <fullName>UnnecessaryNewWorkLocationAdress__c</fullName>
    <formula>Application__r.NewAffiliationAdress1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(不要)新所属住所</label>
    <type>Text</type>
</CustomField>