force-app/main/default/objects/DesiredCondition__c/fields/UnnecessaryResidentNumber__c.field-meta.xml
<CustomField>
    <fullName>UnnecessaryResidentNumber__c</fullName>
    <formula>Application__r.ResidentNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(不要)入居人数(人)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>